--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
+  "dependencies": {
+    "parcel": "^2.15.4"
+  },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.14.3",
     "gh-pages": "^6.3.0",
-    "parcel": "^2.15.4",
     "svgo": "^3.3.2"
   }
 }
