--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build src/index.html --dist-dir dist --public-url ./"
+    "build": "npx parcel build src/index.html --dist-dir dist --public-url ./"
   },
   "dependencies": {
     "parcel": "^2.15.4"
