--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "fastmove",
   "version": "1.0.0",
+  "source": "src/index.html",
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "npx parcel build src/index.html --dist-dir dist --public-url ./"
+    "start": "parcel",
+    "build": "parcel build src/index.html --dist-dir dist --public-url ./"
   },
-  "dependencies": {},
-  "devDependencies": {
-    "@parcel/transformer-sass": "^2.14.3",
+  "dependencies": {
     "parcel": "^2.9.3"
   },
-  "browserslist": [
-    "last 2 versions",
-    "not dead"
-  ]
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.14.3",
+    "svgo": "^3.3.2"
+  }
 }
