--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "start": "parcel",
     "build": "parcel build src/index.html --dist-dir dist --public-url ./"
   },
-  "dependencies": {
-    "parcel": "2.9.3"
-  },
   "devDependencies": {
+    "parcel": "2.9.3",
     "@parcel/transformer-sass": "^2.14.3",
     "svgo": "^3.3.2"
   }
