--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "parcel build src/index.html --dist-dir dist --public-url ./"
   },
   "dependencies": {
+    "parcel": "2.9.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.9.3",
-    "svgo": "^3.3.2",
-    "parcel": "2.9.3"
+    "svgo": "^3.3.2"
   }
 }
