--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
+    "prebuild": "chmod +x node_modules/.bin/parcel",
     "build": "parcel build src/index.html --dist-dir dist --public-url ./"
-  },
-  "dependencies": {
-    "parcel": "2.9.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.9.3",
-    "svgo": "^3.3.2"
+    "svgo": "^3.3.2",
+    "parcel": "2.9.3"
   }
 }
