--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "installCommand": "npm install",
   "build": {
     "env": {
-      "NODE_ENV": "production"
+      "NODE_VERSION": "20"
     }
   }
 }
