--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install",
-  "build": {
-    "env": {
-      "NODE_VERSION": "20"
-    }
-  }
+  "installCommand": "npm install"
 }
